// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should match primary snapshot 1`] = `
.c0 {
  display: inline-block;
  text-align: center;
  background: #624DE3;
  border: 2px solid #624DE3;
  border-radius: 50px;
  box-shadow: 0px 6px 12px rgba(98,77,227,0.3);
  padding: 12px 26px;
  color: #ffffff;
  font-size: 16px;
  line-height: 19px;
  font-family: inherit;
  min-width: 142px;
}

<div>
  <button
    class="c0"
  >
    Test
  </button>
</div>
`;

exports[`Button component should match secondary snapshot 1`] = `
.c0 {
  display: inline-block;
  text-align: center;
  background: transparent;
  border: 2px solid #624DE3;
  border-radius: 50px;
  box-shadow: 0px 6px 12px rgba(98,77,227,0.3);
  padding: 12px 26px;
  color: #624DE3;
  font-size: 16px;
  line-height: 19px;
  font-family: inherit;
  min-width: 142px;
}

<div>
  <button
    class="c0"
  >
    Test
  </button>
</div>
`;
